...
                usingItemLabel.zPosition = Layer.score
                usingItemLabel.fontName = "AvenirNext-Bold"
                
                usingItemLabel.text = ("-1 " + (BackpackScene.chosenItem?.name ?? "wood"))
                
                switch BackpackScene.chosenItem!.type{
                case "placable":
                    let item = GameObjectNode(texture: (BackpackScene.chosenItem!.texture)!, name: BackpackScene.chosenItem!.name!)
                        item.position.x = player.position.x
                        item.position.y = -size.height * 0.32
                    if(item.name == "mine"){
                        item.resourceAmount = 10
                        placingItemLabelShoving(usingItemLabel: usingItemLabel, animateLabel: animateLabel, item: item)
...
        hurray = SKAction.playSoundFileNamed(
            Assets.Sounds.hurray,
            waitForCompletion: true
        )
        
        //Controls
        attackBtn = ButtonNode(normalTexture: Assets.Textures.Buttons.attackBtnNormal, highlightedTexture: Assets.Textures.Buttons.attackBtnActive, bgName: "attackButton")
        attackBtn.position = CGPoint(x: 0, y: -110)
        attackBtn.accessibilityIdentifier = "attackButton"
        attackBtn.isAccessibilityElement = true
        //attackBtn.normalSound = Assets.Sounds.treeHit
        //attackBtn.canPlaySounds = true
        
        interactBtn = ButtonNode(normalTexture: Assets.Textures.Buttons.interactBtnNormal, highlightedTexture: Assets.Textures.Buttons.interactBtnActive, bgName: "interactButton")
        interactBtn.position = CGPoint(x: 0, y: -125)
        interactBtn.accessibilityIdentifier = "interactButton"
        interactBtn.isAccessibilityElement = true
        
        openInvBtn = ButtonNode(normalTexture: Assets.Textures.Buttons.invBtnNormal, highlightedTexture: Assets.Textures.Buttons.invBtnActive, bgName: "openInventoryButton")
        openInvBtn.position = CGPoint(x: 0, y: -70)
        openInvBtn.accessibilityIdentifier = "openInventoryButton"
        openInvBtn.isAccessibilityElement = true
        
        //connect actions
        attackBtn.action = attackButtonAction
...
