...
            playBtn.setTitle("Play", for: .normal) // Set the title
            playBtn.setTitleColor(.black, for: .normal) // Set the text color
        //playBtn.titleLabel?.font
            playBtn.titleLabel?.font = UIFont(name: "AvenirNext-Bold", size: 36) // Set the font and size
        playBtn.addTarget(self, action: #selector(playButtonTapped), for: .touchUpInside) // Add a target action
        
        playBtn.accessibilityIdentifier = "play"
        playBtn.isAccessibilityElement = true
        
        // Center the UIButton inside the SKShapeNode
        let buttonCenter = CGPoint(x: size.width / 2 + playButton.frame.midX, y: playButton.frame.midY * 4.75)
        playBtn.center = buttonCenter
        
...
