...
            }
        
        let background = BackpackBackgroundNode(textureName: Assets.Textures.Background.researchBG)
        background.position = CGPoint(x: size.width / 2, y: size.height / 2)
        addChild(background)
        
        closeInvBtn = ButtonNode(normalTexture: Assets.Textures.Buttons.closeInvBtn, highlightedTexture: Assets.Textures.Buttons.closeInvBtn, bgName: "closeButton")
        closeInvBtn.position = CGPoint(x: size.width * 0.927, y: size.height * 0.9)
        closeInvBtn.zPosition = Layer.button
        closeInvBtn.size = CGSize(width: size.width*0.05, height: size.height*0.1)
        closeInvBtn.action = closeInventoryButtonAction
        addChild(closeInvBtn)
        
...
